# template-python

./: MANIFEST.in  README.md  README.rst  pyproject.toml
docs/source/: api.rst  conf.py  glossary.rst  index.rst
